bug fix: image preview not showing when download. add: waiting cursor when loading.

--- a/res/index.css
+++ b/res/index.css
@@ -1,10 +1,12 @@
 /**reset**/
-* {
+body {
 	font-size: 16px;
 }
-
+a {
+   outline: 0;
+}
 @media ( min-width : 1200px) , ( min-height : 1200px) {
-	* {
+	body {
 		font-size: 20px;
 	}
 }
@@ -144,13 +146,13 @@ body>nav li>a {
 	text-decoration: none;
 }
 /**end nav bar**/
-aside {
+body>aside {
 	opacity: 0;
 	-webkit-transition: opacity ease-out 500ms;
 	z-index: 2;
 }
 
-aside.front {
+body>aside.front {
 	opacity: 1;
 	z-index: 4;
 }
@@ -417,6 +419,9 @@ aside.front {
   z-index: -1;
 }
 */
+#cover h1{
+	font-size:1.2em;
+}
 #cover h1 a {
 	background: black;
 	display: block;
@@ -426,7 +431,7 @@ aside.front {
 	color: white;
 }
 
-#cover .previewImg {
+#cover .previewImg , #cover .wait{
 	position: absolute;
 	top: 50%;
 	left: 2em;
@@ -434,6 +439,11 @@ aside.front {
 	height: 33%;
 	background-repeat: no-repeat;
 	background-size: 100%;
+	background-position:50% 50%;
+}
+#cover .wait{
+	background-image:url(busy-32.gif);
+	background-size:auto;
 }
 /**end cover**/
 
